--- a/app/src/main/res/layout/activity_new_route_plan.xml
+++ b/app/src/main/res/layout/activity_new_route_plan.xml
@@ -14,57 +14,124 @@
 
     <Button
         android:id="@+id/map_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="退出" />
+        android:layout_width="@dimen/dimen_72dp"
+        android:layout_height="@dimen/dimen_72dp"
+        android:layout_marginLeft="@dimen/dimen_20dp"
+        android:layout_marginTop="@dimen/dimen_20dp"
+        android:background="@drawable/zhy_map_back" />
 
     <Button
         android:id="@+id/map_more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dimen_72dp"
+        android:layout_height="@dimen/dimen_72dp"
         android:layout_alignParentRight="true"
-        android:text="更多" />
+        android:layout_marginRight="@dimen/dimen_20dp"
+        android:layout_marginTop="@dimen/dimen_20dp"
+        android:background="@drawable/zhy_map_more" />
 
     <Button
         android:id="@+id/map_resetlocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dimen_72dp"
+        android:layout_height="@dimen/dimen_72dp"
+        android:layout_above="@+id/map_wayll"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/map_more"
-        android:text="自选" />
+        android:layout_marginBottom="@dimen/dimen_20dp"
+        android:layout_marginRight="@dimen/dimen_20dp"
+        android:background="@drawable/zhy_map_getpoint" />
 
+    
     <Button
         android:id="@+id/map_mylocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dimen_72dp"
+        android:layout_height="@dimen/dimen_72dp"
         android:layout_above="@+id/map_wayll"
-        android:text="我的位置" />
+        android:layout_marginBottom="@dimen/dimen_20dp"
+        android:layout_marginLeft="@dimen/dimen_20dp"
+        android:background="@drawable/zhy_map_mylocation" />
 
     <LinearLayout
         android:id="@+id/map_wayll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="@color/white"
+        android:gravity="left"
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/map_walk"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="步行" />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/map_bus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="公交" />
+            <ImageView
+                android:id="@+id/map_walk"
+                android:layout_width="@dimen/dimen_50dp"
+                android:layout_height="@dimen/dimen_45dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:src="@drawable/zhy_map_walk_bt" />
 
-        <Button
-            android:id="@+id/map_drive"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:text="步行"
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="驾车" />
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/map_bus"
+                android:layout_width="@dimen/dimen_50dp"
+                android:layout_height="@dimen/dimen_45dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:src="@drawable/zhy_map_bus_bt" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:text="公交"
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/map_drive"
+                android:layout_width="@dimen/dimen_50dp"
+                android:layout_height="@dimen/dimen_45dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:src="@drawable/zhy_map_drive_bt" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:text="驾车"
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_20dp" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
