--- a/app/src/main/res/layout/activity_transit_item.xml
+++ b/app/src/main/res/layout/activity_transit_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/transitName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="@color/blackgroundmain" />
+        android:textColor="@color/zhy_text_color_1" />
 
     <TextView
         android:id="@+id/lightNum"
