--- a/app/src/main/res/layout/dialog_map_line_choice.xml
+++ b/app/src/main/res/layout/dialog_map_line_choice.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="请点击选择所需路线"
+        android:textColor="@color/zhy_text_color_1" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1dp"
+        android:background="@color/black" />
+
+    <ListView
+        android:id="@+id/transitList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/white"
+        android:divider="@drawable/bg_line"
+        android:dividerHeight="1px"
+        android:padding="15dp"></ListView>
 
 </LinearLayout>
