--- a/app/src/main/res/layout/activity_neworder.xml
+++ b/app/src/main/res/layout/activity_neworder.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/main_blackground"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main_blackground">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -104,11 +104,20 @@
                 android:text="客户当前地址:" />
         </LinearLayout>
 
+        <EditText
+            android:id="@+id/et_neworder_newlocation"
+            style="@style/edit_order_editTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/dimen_10dp" />
+
         <com.shian.shianlife.common.view.LBSLocalView
             android:id="@+id/lbs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_20dp" />
+            android:layout_marginTop="@dimen/dimen_20dp"
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/et_otheradd"
@@ -121,6 +130,7 @@
             android:padding="@dimen/dimen_10dp"
             android:textSize="@dimen/text_size_detail_list"
             android:visibility="gone" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
