--- a/app/src/main/res/layout/view_funeraldetail.xml
+++ b/app/src/main/res/layout/view_funeraldetail.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_visitNum"
         style="@style/order_detail_projectTextStyle"
         android:layout_width="wrap_content"
