--- a/app/src/main/res/layout/fragment_newhome.xml
+++ b/app/src/main/res/layout/fragment_newhome.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.handmark.pulltorefresh.library.PullToRefreshScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/zhy_backgroud_1"
     android:orientation="vertical">
 
-    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        ></com.handmark.pulltorefresh.library.PullToRefreshScrollView>
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.shian.shianlife.view.customview.UserInfoLayout
+            android:id="@+id/userinfo_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.shian.shianlife.view.customview.UserInfoLayout>
+
+        <com.shian.shianlife.view.customview.MainAdvertisementLayout
+            android:layout_marginTop="@dimen/dimen_18dp"
+            android:id="@+id/mainadvertisement_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"></com.shian.shianlife.view.customview.MainAdvertisementLayout>
+    </LinearLayout>
+</com.handmark.pulltorefresh.library.PullToRefreshScrollView>
