--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,6 +49,8 @@
     <color name="zhy_text_color_4">#FC8383</color>
     <color name="zhy_text_color_5">#818181</color>
     <color name="zhy_text_color_6">#67BEDB</color>
+    <color name="zhy_text_color_7">#FFDA76</color>
+    <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_backgroud_1">#F1F6F5</color>
     <!-- Dialog Color -->
     <color name="version_msg_color">#ff6699ff</color>
