--- a/app/src/main/res/layout/fragment_newhome.xml
+++ b/app/src/main/res/layout/fragment_newhome.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/zhy_backgroud_1"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,10 +17,24 @@
             android:layout_height="wrap_content"></com.shian.shianlife.view.customview.UserInfoLayout>
 
         <com.shian.shianlife.view.customview.MainAdvertisementLayout
-            android:layout_marginTop="@dimen/dimen_18dp"
             android:id="@+id/mainadvertisement_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_18dp"
             android:visibility="gone"></com.shian.shianlife.view.customview.MainAdvertisementLayout>
+
+        <com.shian.shianlife.view.customview.MainDynamic
+            android:id="@+id/maindynamic_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/dimen_18dp"></com.shian.shianlife.view.customview.MainDynamic>
+
+        <com.shian.shianlife.view.customview.MainAPP
+            android:id="@+id/mainapp_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_18dp"
+            android:layout_marginTop="@dimen/dimen_18dp"></com.shian.shianlife.view.customview.MainAPP>
     </LinearLayout>
 </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
