--- a/app/src/main/res/layout/view_userinfo_point_layout.xml
+++ b/app/src/main/res/layout/view_userinfo_point_layout.xml
@@ -32,6 +32,7 @@
         android:layout_marginLeft="@dimen/dimen_36dp"
         android:gravity="center"
         android:id="@+id/tv_point"
+        android:lines="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/zhy_text_color_6"
