--- a/app/src/main/res/layout/activity_user_info_integral.xml
+++ b/app/src/main/res/layout/activity_user_info_integral.xml
@@ -74,6 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dimen_16dp"
                 android:layout_weight="1"
+
                 android:text="积分商城"
                 android:textSize="@dimen/dimen_32dp" />
 
@@ -90,6 +91,7 @@
             android:background="@color/zhy_line_3" />
 
         <LinearLayout
+            android:id="@+id/ll_details"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_110dp"
             android:background="@color/white"
