精选制作  我的界面制作

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:background="@color/main_blackground"></FrameLayout>
 
         <FrameLayout
+            android:background="@color/white"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/dimen_96dp">
 
