--- a/app/src/main/res/layout/fragment_userinfo.xml
+++ b/app/src/main/res/layout/fragment_userinfo.xml
@@ -2,22 +2,37 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_blackground">
+    android:background="@color/zhy_backgroud_1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        android:background="@color/white"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_username"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:padding="@dimen/dimen_30dp"
-            android:text="姓名:"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_top_bg" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="@dimen/dimen_220dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="@dimen/dimen_30dp"
+                android:text="姓名"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
+        </LinearLayout>
 
 
         <View
@@ -25,45 +40,86 @@
             android:layout_height="0.1dip"
             android:background="@drawable/user_down_line" />
 
-        <TextView
-            android:id="@+id/tv_phone"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:padding="@dimen/dimen_30dp"
-            android:text="联系方式:"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_top_bg" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="@dimen/dimen_220dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="@dimen/dimen_30dp"
+                android:text="联系方式"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.1dip"
             android:background="@drawable/user_down_line" />
 
-        <TextView
-            android:id="@+id/tv_address"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:padding="@dimen/dimen_30dp"
-            android:text="服务区域:"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_top_bg" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="@dimen/dimen_220dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="@dimen/dimen_30dp"
+                android:text="服务区域"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.1dip"
             android:background="@drawable/user_down_line" />
 
-        <TextView
-            android:id="@+id/tv_no"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:padding="@dimen/dimen_30dp"
-            android:text="持证上岗编号:"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_top_bg" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="@dimen/dimen_220dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="@dimen/dimen_30dp"
+                android:text="持证上岗编号"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -74,10 +130,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:background="@color/zhy_backgroud_1"
             android:padding="@dimen/dimen_30dp"
             android:text="注：以上信息请联系客服人员进行修改"
             android:textColor="@color/red"
-            android:textSize="@dimen/text_size_detail_list" />
+            android:textSize="@dimen/dimen_24dp" />
 
         <View
             android:layout_width="match_parent"
@@ -94,9 +151,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:padding="@dimen/dimen_30dp"
-                android:text="邮箱地址:"
+                android:text="邮箱地址"
                 android:textColor="@color/black"
-                android:textSize="@dimen/text_size_top_bg" />
+                android:textSize="@dimen/dimen_24dp" />
 
             <EditText
                 android:id="@+id/et_email"
@@ -104,11 +161,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
+                android:background="@null"
                 android:gravity="left"
                 android:padding="@dimen/dimen_30dp"
                 android:text=""
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_top_bg" />
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
 
@@ -119,7 +177,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_160dp"
             android:orientation="horizontal">
 
             <TextView
@@ -127,9 +185,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:padding="@dimen/dimen_30dp"
-                android:text="个人介绍:"
+                android:text="个人介绍"
                 android:textColor="@color/black"
-                android:textSize="@dimen/text_size_top_bg" />
+                android:textSize="@dimen/dimen_24dp" />
 
             <EditText
                 android:id="@+id/et_js"
@@ -137,11 +195,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
+                android:background="@null"
                 android:gravity="left"
                 android:padding="@dimen/dimen_30dp"
                 android:text=""
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_top_bg" />
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
         <View
@@ -150,15 +209,20 @@
             android:layout_weight="1" />
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_16dp"
+            android:background="@color/zhy_backgroud_1" />
+
+        <TextView
             android:id="@+id/tv_editorder"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:layout_margin="@dimen/dimen_40dp"
-            android:background="@drawable/ic_home_reg"
+            android:layout_marginBottom="@dimen/dimen_24dp"
+            android:layout_marginTop="@dimen/dimen_24dp"
             android:gravity="center"
             android:text="保存"
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/dimen_40dp" />
+            android:textColor="@color/zhy_text_color_1"
+            android:textSize="@dimen/dimen_24dp" />
     </LinearLayout>
 </ScrollView>
