--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,6 +41,7 @@
     <color name="zhy_line_2">#898989</color>
     <color name="zhy_line_3">#e4e4e4</color>
     <color name="zhy_line_4">#efefef</color>
+    <color name="zhy_line_5">#dde4e3</color>
     <color name="cemetery_titlecolor">#f6c858</color>
     <color name="gray_text">#767676</color>
     <color name="zhy_text_color_1">#48cfad</color>
@@ -51,6 +52,7 @@
     <color name="zhy_text_color_6">#67BEDB</color>
     <color name="zhy_text_color_7">#FFDA76</color>
     <color name="zhy_text_color_8">#A2A2A2</color>
+    <color name="zhy_text_color_9">#6d8780</color>
     <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_rb_check_1">#ededed</color>
     <color name="zhy_rb_uncheck_1">#dedede</color>
