--- a/app/src/main/res/layout/activity_my_collection.xml
+++ b/app/src/main/res/layout/activity_my_collection.xml
@@ -10,7 +10,7 @@
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/pull_listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:divider="@color/zhy_backgroud_1"
         android:dividerHeight="@dimen/dimen_10dp"></com.handmark.pulltorefresh.library.PullToRefreshListView>
 
